Finished dialog widget.

--- a/playground/index.html
+++ b/playground/index.html
@@ -1570,7 +1570,7 @@
 												</div>
 												<div class="atk-cell atk-jackscrew">
 													<h4>Apples</h4>
-													<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci.</p>
+													<p class="atk-push-small">Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.</p>
 													<div class="atk-actions">
 														<a href="#"><span class="icon-down-circled-1"></span>Download</a><a href="#"><span class="icon-trash"></span>Delete</a>
 													</div>
@@ -1582,7 +1582,7 @@
 												</div>
 												<div class="atk-cell atk-jackscrew">
 													<h4>Tomatoes</h4>
-													<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci.</p>
+													<p class="atk-push-small">Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.</p>
 													<div class="atk-actions">
 														<a href="#"><span class="icon-down-circled-1"></span>Download</a><a href="#"><span class="icon-trash"></span>Delete</a>
 													</div>
@@ -1596,7 +1596,7 @@
 												</div>
 												<div class="atk-cell atk-jackscrew">
 													<h4>Bananas</h4>
-													<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+													<p class="atk-push-small">Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.</p>
 													<div class="atk-actions">
 														<a href="#"><span class="icon-down-circled-1"></span>Download</a><a href="#"><span class="icon-trash"></span>Delete</a>
 													</div>
@@ -1608,7 +1608,7 @@
 												</div>
 												<div class="atk-cell atk-jackscrew">
 													<h4>Blueberries</h4>
-													<p>Nunc id erat sit amet sapien convallis ultricies sed vel est.</p>
+													<p class="atk-push-small">Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.</p>
 													<div class="atk-actions">
 														<a href="#"><span class="icon-down-circled-1"></span>Download</a><a href="#"><span class="icon-trash"></span>Delete</a>
 													</div>
@@ -1871,12 +1871,12 @@
 										</form>
 									</div>
 								</div>
-								<p>Modal <span class="atk-label atk-effect-info">.ui-dialog</span> with the <span class="atk-label atk-effect-info">button</span> option on. It is recommended to use only 2 buttons in the panel.</p>
+								<p>Modal <span class="atk-label atk-effect-info">.ui-dialog</span> with the <span class="atk-label atk-effect-info">button</span> option on.</p>
 								<div class="atk-box atk-inline">
 									<button class="atk-button" id="opener2">Open Dialog with the Button Panel</button>
 								</div>
-								<div id="dialog-buttonpane" title="Dialog with the Button Panel">
-								  <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+								<div id="dialog-buttonpane" title="Dialog with the Panel">
+								  <p>Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum.</p>
 								</div>
 								<h3>Tabs</h3>
 								
