Added label for menu example.

--- a/playground/index.html
+++ b/playground/index.html
@@ -217,6 +217,7 @@
 								<p>Component <span class="atk-label atk-effect-info">.atk-menu-vertical</span> combined with <span class="atk-label atk-effect-info">.atk-padding-small</span> and <span class="atk-label atk-effect-info">.atk-label</span>.</p>
 								<div class="atk-box span_4">
 									<div class="atk-menu-vertical">
+										<span class="atk-padding-small atk-swatch-blue">Label</span>
 										<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
 											<span class="atk-cell atk-jackscrew"><strong>Item #1</strong></span>
 											<span class="atk-cell"><span class="atk-label atk-swatch-yellow">3</span></span>
@@ -240,14 +241,11 @@
 								<p>Component <span class="atk-label atk-effect-info">.atk-menu-vertical</span> combined with <span class="atk-label atk-effect-info">.atk-button</span>.</p>
 								<div class="atk-box span_4">
 									<div class="atk-menu-vertical">
-										<a href="#" class="atk-swatch-blue atk-button-large"><span class="icon-angle-left"></span></a>
-										<a href="#" class="atk-swatch-blue atk-button-large"><span class="icon-calendar"></span></a>
-										<a href="#" class="atk-swatch-blue atk-button-large">1</a>
-										<a href="#" class="atk-swatch-blue atk-button-large">2</a>
-										<a href="#" class="atk-swatch-blue atk-button-large">3</a>
-										<a href="#" class="atk-swatch-blue atk-button-large">4</a>
-										<a href="#" class="atk-swatch-blue atk-button-large">5</a>
-										<a href="#" class="atk-swatch-blue atk-button-large"><span class="icon-angle-right"></span></a>
+										<a href="#" class="atk-swatch-blue atk-button-large">Item #1</a>
+										<a href="#" class="atk-swatch-blue atk-button-large">Item #2</a>
+										<a href="#" class="atk-swatch-blue atk-button-large">Item #3</a>
+										<a href="#" class="atk-swatch-blue atk-button-large">Item #4</a>
+										<a href="#" class="atk-swatch-blue atk-button-large">Item #5</a>
 									</div>
 								</div>
 								<h3>Paddings &amp; Margins</h3>
