Updated menu component example.

--- a/playground/index.html
+++ b/playground/index.html
@@ -217,18 +217,22 @@
 								<p>Component <span class="atk-label atk-effect-info">.atk-menu-vertical</span> combined with <span class="atk-label atk-effect-info">.atk-padding-small</span> and <span class="atk-label atk-effect-info">.atk-label</span>.</p>
 								<div class="atk-box span_4">
 									<div class="atk-menu-vertical">
-										<span class="atk-padding-small atk-swatch-blue">Label</span>
+										<span class="atk-padding-small atk-swatch-ink atk-size-kilo">Navigation</span>
 										<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
-											<span class="atk-cell atk-jackscrew"><strong>Item #1</strong></span>
-											<span class="atk-cell"><span class="atk-label atk-swatch-yellow">5</span></span>
+											<span class="atk-cell atk-jackscrew"><span class="icon-gauge-1"></span>&nbsp;<strong>Dashboard</strong></span>
+											<span class="atk-cell"><span class="atk-label atk-swatch-blue">5</span></span>
 										</a>
 										<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
-											<span class="atk-cell atk-jackscrew"><strong>Item #2</strong></span>
-											<span class="atk-cell"><span class="atk-label atk-shape-circle atk-swatch-blue">1</span></span>
+											<span class="atk-cell atk-jackscrew"><span class="icon-paper-plane"></span>&nbsp;<strong>Messages</strong></span>
+											<span class="atk-cell"><span class="atk-label atk-shape-circle atk-swatch-green">1</span></span>
 										</a>
 										<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
-											<span class="atk-cell atk-jackscrew"><strong>Item #3</strong></span>
-											<span class="atk-cell"><span class="atk-label atk-swatch-green atk-shape-rectangle">8</span></span>
+											<span class="atk-cell atk-jackscrew"><span class="icon-chart-line"></span>&nbsp;<strong>Analytics</strong></span>
+											<span class="atk-cell"></span>
+										</a>
+										<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
+											<span class="atk-cell atk-jackscrew"><span class="icon-tools"></span>&nbsp;<strong>Settings</strong></span>
+											<span class="atk-cell"><span class="atk-size-kilo atk-swatch-yellow icon-attention"></span></span>
 										</a>
 									</div>
 								</div>
