New layout templates.

--- a/playground/index.html
+++ b/playground/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
-		<title>Agile Toolkit</title>
+		<title>AgileToolkit CSS</title>
         
         <meta name="description" content="123">
         <meta name="viewport" content="width=device-width">
@@ -21,13 +21,13 @@
 
         <!-- Content -->
         <div class="atk-layout">
-			<div class="atk-layout-row">
-				<header id="atk-header" class="atk-size-giga atk-swatch-ink atk-padding-small atk-align-center">AgileToolkit <span class="atk-label atk-swatch-yellow">CSS</span></header>
+			<div class="atk-layout-row atk-swatch-ink">
+				<div class="atk-wrapper"><header id="atk-header" class="atk-size-giga atk-padding-small atk-align-center">AgileToolkit <span class="atk-label atk-swatch-yellow">CSS</span></header></div>
 			</div>
 			<div id="atk-main" class="atk-layout-row fluid">
 				<div id="atk-main-inner" class="atk-layout">
-					<div id="atk-content" class="atk-layout-column fluid atk-padding-large">
-						<div class="atk-wrapper">
+					<div id="atk-content" class="atk-layout-column fluid">
+						<div class="atk-wrapper atk-padding-large">
 							<section id="grid-system">
 								<h2>Grid System</h2>
 								<p>Our grid system is based on <a href="http://www.gridpak.com">Gridpak</a> tool which allows you to add as many columns as needed. It also supports responsiveness.</p>
@@ -62,9 +62,9 @@
 								</div>
 								<p><span class="atk-label atk-effect-warning"><span class="icon-attention"></span></span>&nbsp;<span class="atk-label atk-effect-info">&lt;code&gt;</span></p>
 								<div class="atk-box">
-	<code>body {
-	  background: #ffffff;
-	}</code>
+									<code>body {
+									  background: #ffffff;
+									}</code>
 								</div>
 								<p><span class="atk-label atk-effect-warning"><span class="icon-attention"></span></span>&nbsp;Use <span class="atk-label atk-effect-info">&lt;blockquote&gt;</span> to indicate a block of quoted text.</p>
 								<div class="atk-box">
