Menu widget got updated. Added support of second levels.

--- a/playground/index.html
+++ b/playground/index.html
@@ -209,9 +209,9 @@
 								<h3>Menu</h3>
 								<p>Component <span class="atk-label atk-effect-info">.atk-menu-horizontal</span> combined with <span class="atk-label atk-effect-info">.atk-padding</span>.</p>
 								<div class="atk-box atk-inline">
-									<div class="atk-menu-horizontal">
-										<a href="#" class="atk-padding atk-swatch-ink">Item #1</a><a href="#" class="atk-padding atk-swatch-ink">Item #2</a><a href="#" class="atk-padding atk-swatch-ink">Item #3</a>
-									</div>
+									<ul class="atk-menu-horizontal">
+										<li><a href="#" class="atk-padding atk-swatch-ink">Item #1</a></li><li><a href="#" class="atk-padding atk-swatch-ink">Item #2</a></li><li><a href="#" class="atk-padding atk-swatch-ink">Item #3</a></li>
+									</ul>
 								</div>
 								<p>2 Level Menu</p>
 								<div class="atk-box atk-inline">
@@ -236,41 +236,49 @@
 								</div>
 								<p>Component <span class="atk-label atk-effect-info">.atk-menu-vertical</span> combined with <span class="atk-label atk-effect-info">.atk-padding-small</span> and <span class="atk-label atk-effect-info">.atk-label</span>.</p>
 								<div class="atk-box span_4">
-									<div class="atk-menu-vertical">
-										<span class="atk-padding-small atk-swatch-ink atk-size-kilo">Navigation</span>
-										<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
-											<span class="atk-cell atk-jackscrew"><span class="icon-gauge-1"></span>&nbsp;<strong>Dashboard</strong></span>
-											<span class="atk-cell"><span class="atk-label atk-swatch-blue">253</span></span>
-										</a>
-										<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
-											<span class="atk-cell atk-jackscrew"><span class="icon-paper-plane"></span>&nbsp;<strong>Messages</strong></span>
-											<span class="atk-cell"><span class="atk-label atk-shape-circle atk-swatch-green">1</span></span>
-										</a>
-										<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
-											<span class="atk-cell atk-jackscrew"><span class="icon-chart-line"></span>&nbsp;<strong>Analytics</strong></span>
-											<span class="atk-cell"></span>
-										</a>
-										<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
-											<span class="atk-cell atk-jackscrew"><span class="icon-tools"></span>&nbsp;<strong>Settings</strong></span>
-											<span class="atk-cell"><span class="atk-size-kilo atk-swatch-yellow icon-attention"></span></span>
-										</a>
-									</div>
+									<ul class="atk-menu-vertical">
+										<li class="atk-padding-small atk-swatch-ink atk-size-kilo">Navigation</li>
+										<li>
+											<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
+												<span class="atk-cell atk-jackscrew"><span class="icon-gauge-1"></span>&nbsp;<strong>Dashboard</strong></span>
+												<span class="atk-cell"><span class="atk-label atk-size-milli atk-swatch-blue">253</span></span>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
+												<span class="atk-cell atk-jackscrew"><span class="icon-paper-plane"></span>&nbsp;<strong>Messages</strong></span>
+												<span class="atk-cell"><span class="atk-label atk-size-milli atk-shape-circle atk-swatch-green">1</span></span>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
+												<span class="atk-cell atk-jackscrew"><span class="icon-chart-line"></span>&nbsp;<strong>Analytics</strong></span>
+												<span class="atk-cell"></span>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
+												<span class="atk-cell atk-jackscrew"><span class="icon-tools"></span>&nbsp;<strong>Settings</strong></span>
+												<span class="atk-cell"><span class="atk-size atk-swatch-yellow icon-attention"></span></span>
+											</a>
+										</li>
+									</ul>
 								</div>
 								<p>Component <span class="atk-label atk-effect-info">.atk-menu-horizontal</span> combined with <span class="atk-label atk-effect-info">.atk-button-small</span>.</p>
 								<div class="atk-box atk-inline">
-									<div class="atk-menu-horizontal">
-										<a href="#" class="atk-swatch-blue atk-button-small"><span class="icon-angle-left"></span></a><a href="#" class="atk-swatch-blue atk-button-small"><span class="icon-calendar"></span></a><a href="#" class="atk-swatch-blue atk-button-small">1</a><a href="#" class="atk-swatch-blue atk-button-small">2</a><a href="#" class="atk-swatch-blue atk-button-small">3</a><a href="#" class="atk-swatch-blue atk-button-small">4</a><a href="#" class="atk-swatch-blue atk-button-small">5</a><a href="#" class="atk-swatch-blue atk-button-small"><span class="icon-angle-right"></span></a>
-									</div>
+									<ul class="atk-menu-horizontal">
+										<li><a href="#" class="atk-swatch-blue atk-button-small"><span class="icon-angle-left"></span></a></li><li><a href="#" class="atk-swatch-blue atk-button-small"><span class="icon-calendar"></span></a></li><li><a href="#" class="atk-swatch-blue atk-button-small">1</a><a href="#" class="atk-swatch-blue atk-button-small">2</a></li><li><a href="#" class="atk-swatch-blue atk-button-small">3</a></li><li><a href="#" class="atk-swatch-blue atk-button-small">4</a></li><li><a href="#" class="atk-swatch-blue atk-button-small">5</a></li><li><a href="#" class="atk-swatch-blue atk-button-small"><span class="icon-angle-right"></span></a></li>
+									</ul>
 								</div>
 								<p>Component <span class="atk-label atk-effect-info">.atk-menu-vertical</span> combined with <span class="atk-label atk-effect-info">.atk-button</span>.</p>
 								<div class="atk-box span_4">
-									<div class="atk-menu-vertical">
-										<a href="#" class="atk-swatch-blue atk-button-large">Item #1</a>
-										<a href="#" class="atk-swatch-blue atk-button-large">Item #2</a>
-										<a href="#" class="atk-swatch-blue atk-button-large">Item #3</a>
-										<a href="#" class="atk-swatch-blue atk-button-large">Item #4</a>
-										<a href="#" class="atk-swatch-blue atk-button-large">Item #5</a>
-									</div>
+									<ul class="atk-menu-vertical">
+										<li><a href="#" class="atk-swatch-blue atk-button-large">Item #1</a></li>
+										<li><a href="#" class="atk-swatch-blue atk-button-large">Item #2</a></li>
+										<li><a href="#" class="atk-swatch-blue atk-button-large">Item #3</a></li>
+										<li><a href="#" class="atk-swatch-blue atk-button-large">Item #4</a></li>
+										<li><a href="#" class="atk-swatch-blue atk-button-large">Item #5</a></li>
+									</ul>
 								</div>
 								<h3>Paddings &amp; Margins</h3>
 								<h4>Actions</h4>
