--- a/playground/index.html
+++ b/playground/index.html
@@ -2060,16 +2060,16 @@
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.core.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.widget.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.position.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.menu.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.tabs.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.datepicker.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.selectmenu.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.accordion.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.dialog.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.button.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/core.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/widget.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/position.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/menu.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/tabs.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/datepicker.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/selectmenu.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/accordion.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/dialog.js"></script>
+        <script src="http://view.jqueryui.com/master/ui/button.js"></script>
         <script src="js/atk-helpers-min.js"></script>
         <script src="js/demo.js"></script>
 
